samples/_failures_safe/1761365445_70cbd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2f68c55.c: In function ‘main’:
./samples/SAFE/__tmp_b2f68c55.c:163:12: error: missing terminating " character
  163 |     printf("Enter expression to tokenize
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b2f68c55.c:163:5: error: expected expression at end of input
  163 |     printf("Enter expression to tokenize
      |     ^~~~~~
./samples/SAFE/__tmp_b2f68c55.c:163:5: error: expected declaration or statement at end of input
